# moral-lineage-tracing

./: CMakeLists.txt  README.md
code/: CMakeLists.txt  LICENSE
code/include/andres/ilp/: gurobi.hxx
code/include/lineage/: problem-graph.hxx  solver-contraction-ilp.hxx  solver-ilp.hxx  validation.hxx
code/src/andres/graphics/: viewer-opengl.cxx
code/src/lineage/: track-lp.cxx
data/: README.txt
data/N2DL-HeLa/full/: edges.csv  nodes.csv
data/N2DL-HeLa/small/: edges.csv  nodes.csv
data/flywing-epithelium/: edges.csv  nodes.csv
include/andres/graph/: shortest-paths.hxx
include/andres/graphics/: svg.hxx
include/andres/ilp/: gurobi-callback.hxx
include/lineage/: graphics.hxx  problem.hxx  solution-graph.hxx  solution.hxx  solver-ilp.hxx  solver-lp.hxx
src/lineage/: draw.cxx  plot-intermediate.cxx  track-ilp.cxx  validate-solution.cxx
